直播够物差分页

--- a/liveShopping/coupon.html
+++ b/liveShopping/coupon.html
@@ -28,276 +28,132 @@
     <meta name='apple-itunes-app' content='app-id=966436668'>
     <!-- 适应移动端end -->
     <title>可派发优惠券</title>
-    <link rel="stylesheet" type="text/css" href="css/lib/mui.min.css">
+    <!--<link rel="stylesheet" type="text/css" href="css/lib/mui.min.css">-->
     <link rel="stylesheet" type="text/css" href="css/base.css">
     <link rel="stylesheet" type="text/css" href="css/coupon.css">
 </head>
 <body>
 <div class="layout">
     <header>
-        <a href="#"><</a>
+        <!--<a href="#" class="return"><</a>-->
         <h1>可派发优惠券</h1>
     </header>
     <!-- 内容 start -->
     <main id="content" class="mui-content mui-scroll-wrapper">
-        <div class="mui-scroll">
-            <div class="coupon-box clearfix">
-                <img class="coupon-bg" src="image/youhuiquan@2x.png" alt=""/>
-                <div class="clearfix subbox1">
-                    <div class="fl mui-input-row mui-checkbox mui-left">
-                        <label>优惠券</label>
-                        <input name="checkbox1" value="Item 1" type="checkbox">
-                    </div>
-                    <div class="fr number">20张</div>
-                </div>
-                <div class="clearfix subbox2">
-                    <div class="fl">¥<span class="price">80.00</span></div>
-                    <div class="fr">
-                        <div>满400.00元可用</div>
-                        <div>有效期：2016.04.29-2016.05.01</div>
-                    </div>
-                </div>
-                <div class="clearfix subbox3">
-                    <div class="fl">仅限商城自营商品使用</div>
-                    <div class="fr">
-                        <div class="mui-numbox" data-numbox-step='1' data-numbox-min='0' data-numbox-max='1000'>
-                            <button class="mui-btn mui-numbox-btn-minus" type="button">-</button>
-                            <input class="mui-numbox-input" type="number" />
-                            <button class="mui-btn mui-numbox-btn-plus" type="button">+</button>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="coupon-box clearfix">
-                <img class="coupon-bg" src="image/youhuiquan@2x.png" alt=""/>
-                <div class="clearfix subbox1">
-                    <div class="fl mui-input-row mui-checkbox mui-left">
-                        <label>优惠券</label>
-                        <input name="checkbox1" value="Item 1" type="checkbox">
-                    </div>
-                    <div class="fr number">20张</div>
-                </div>
-                <div class="clearfix subbox2">
-                    <div class="fl">¥<span class="price">80.00</span></div>
-                    <div class="fr">
-                        <div>满400.00元可用</div>
-                        <div>有效期：2016.04.29-2016.05.01</div>
-                    </div>
-                </div>
-                <div class="clearfix subbox3">
-                    <div class="fl">仅限商城自营商品使用</div>
-                    <div class="fr">
-                        <div class="mui-numbox" data-numbox-step='1' data-numbox-min='0' data-numbox-max='1000'>
-                            <button class="mui-btn mui-numbox-btn-minus" type="button">-</button>
-                            <input class="mui-numbox-input" type="number" />
-                            <button class="mui-btn mui-numbox-btn-plus" type="button">+</button>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="coupon-box clearfix">
-                <img class="coupon-bg" src="image/youhuiquan@2x.png" alt=""/>
-                <div class="clearfix subbox1">
-                    <div class="fl mui-input-row mui-checkbox mui-left">
-                        <label>优惠券</label>
-                        <input name="checkbox1" value="Item 1" type="checkbox">
-                    </div>
-                    <div class="fr number">20张</div>
-                </div>
-                <div class="clearfix subbox2">
-                    <div class="fl">¥<span class="price">80.00</span></div>
-                    <div class="fr">
-                        <div>满400.00元可用</div>
-                        <div>有效期：2016.04.29-2016.05.01</div>
-                    </div>
-                </div>
-                <div class="clearfix subbox3">
-                    <div class="fl">仅限商城自营商品使用</div>
-                    <div class="fr">
-                        <div class="mui-numbox" data-numbox-step='1' data-numbox-min='0' data-numbox-max='1000'>
-                            <button class="mui-btn mui-numbox-btn-minus" type="button">-</button>
-                            <input class="mui-numbox-input" type="number" />
-                            <button class="mui-btn mui-numbox-btn-plus" type="button">+</button>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="coupon-box clearfix">
-                <img class="coupon-bg" src="image/youhuiquan@2x.png" alt=""/>
-                <div class="clearfix subbox1">
-                    <div class="fl mui-input-row mui-checkbox mui-left">
-                        <label>优惠券</label>
-                        <input name="checkbox1" value="Item 1" type="checkbox">
-                    </div>
-                    <div class="fr number">20张</div>
-                </div>
-                <div class="clearfix subbox2">
-                    <div class="fl">¥<span class="price">80.00</span></div>
-                    <div class="fr">
-                        <div>满400.00元可用</div>
-                        <div>有效期：2016.04.29-2016.05.01</div>
-                    </div>
-                </div>
-                <div class="clearfix subbox3">
-                    <div class="fl">仅限商城自营商品使用</div>
-                    <div class="fr">
-                        <div class="mui-numbox" data-numbox-step='1' data-numbox-min='0' data-numbox-max='1000'>
-                            <button class="mui-btn mui-numbox-btn-minus" type="button">-</button>
-                            <input class="mui-numbox-input" type="number" />
-                            <button class="mui-btn mui-numbox-btn-plus" type="button">+</button>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="coupon-box clearfix">
-                <img class="coupon-bg" src="image/youhuiquan@2x.png" alt=""/>
-                <div class="clearfix subbox1">
-                    <div class="fl mui-input-row mui-checkbox mui-left">
-                        <label>优惠券</label>
-                        <input name="checkbox1" value="Item 1" type="checkbox">
-                    </div>
-                    <div class="fr number">20张</div>
-                </div>
-                <div class="clearfix subbox2">
-                    <div class="fl">¥<span class="price">80.00</span></div>
-                    <div class="fr">
-                        <div>满400.00元可用</div>
-                        <div>有效期：2016.04.29-2016.05.01</div>
-                    </div>
-                </div>
-                <div class="clearfix subbox3">
-                    <div class="fl">仅限商城自营商品使用</div>
-                    <div class="fr">
-                        <div class="mui-numbox" data-numbox-step='1' data-numbox-min='0' data-numbox-max='1000'>
-                            <button class="mui-btn mui-numbox-btn-minus" type="button">-</button>
-                            <input class="mui-numbox-input" type="number" />
-                            <button class="mui-btn mui-numbox-btn-plus" type="button">+</button>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="coupon-box clearfix">
-                <img class="coupon-bg" src="image/youhuiquan@2x.png" alt=""/>
-                <div class="clearfix subbox1">
-                    <div class="fl mui-input-row mui-checkbox mui-left">
-                        <label>优惠券</label>
-                        <input name="checkbox1" value="Item 1" type="checkbox">
-                    </div>
-                    <div class="fr number">20张</div>
-                </div>
-                <div class="clearfix subbox2">
-                    <div class="fl">¥<span class="price">80.00</span></div>
-                    <div class="fr">
-                        <div>满400.00元可用</div>
-                        <div>有效期：2016.04.29-2016.05.01</div>
-                    </div>
-                </div>
-                <div class="clearfix subbox3">
-                    <div class="fl">仅限商城自营商品使用</div>
-                    <div class="fr">
-                        <div class="mui-numbox" data-numbox-step='1' data-numbox-min='0' data-numbox-max='1000'>
-                            <button class="mui-btn mui-numbox-btn-minus" type="button">-</button>
-                            <input class="mui-numbox-input" type="number" />
-                            <button class="mui-btn mui-numbox-btn-plus" type="button">+</button>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="coupon-box clearfix">
-                <img class="coupon-bg" src="image/youhuiquan@2x.png" alt=""/>
-                <div class="clearfix subbox1">
-                    <div class="fl mui-input-row mui-checkbox mui-left">
-                        <label>优惠券</label>
-                        <input name="checkbox1" value="Item 1" type="checkbox">
-                    </div>
-                    <div class="fr number">20张</div>
-                </div>
-                <div class="clearfix subbox2">
-                    <div class="fl">¥<span class="price">80.00</span></div>
-                    <div class="fr">
-                        <div>满400.00元可用</div>
-                        <div>有效期：2016.04.29-2016.05.01</div>
-                    </div>
-                </div>
-                <div class="clearfix subbox3">
-                    <div class="fl">仅限商城自营商品使用</div>
-                    <div class="fr">
-                        <div class="mui-numbox" data-numbox-step='1' data-numbox-min='0' data-numbox-max='1000'>
-                            <button class="mui-btn mui-numbox-btn-minus" type="button">-</button>
-                            <input class="mui-numbox-input" type="number" />
-                            <button class="mui-btn mui-numbox-btn-plus" type="button">+</button>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="coupon-box clearfix">
-                <img class="coupon-bg" src="image/youhuiquan@2x.png" alt=""/>
-                <div class="clearfix subbox1">
-                    <div class="fl mui-input-row mui-checkbox mui-left">
-                        <label>优惠券</label>
-                        <input name="checkbox1" value="Item 1" type="checkbox">
-                    </div>
-                    <div class="fr number">20张</div>
-                </div>
-                <div class="clearfix subbox2">
-                    <div class="fl">¥<span class="price">80.00</span></div>
-                    <div class="fr">
-                        <div>满400.00元可用</div>
-                        <div>有效期：2016.04.29-2016.05.01</div>
-                    </div>
-                </div>
-                <div class="clearfix subbox3">
-                    <div class="fl">仅限商城自营商品使用</div>
-                    <div class="fr">
-                        <div class="mui-numbox" data-numbox-step='1' data-numbox-min='0' data-numbox-max='1000'>
-                            <button class="mui-btn mui-numbox-btn-minus" type="button">-</button>
-                            <input class="mui-numbox-input" type="number" />
-                            <button class="mui-btn mui-numbox-btn-plus" type="button">+</button>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
+        <div class="mui-scroll" id="mui-scroll">
         </div>
     </main>
     <!-- 内容 end -->
-    <footer>确定</footer>
+    <footer id="submit">确定</footer>
 </div>
+<script id="product-box" type="text/html">
+    {{each canDrawCouponList as prod i}}
+    <div class="coupon-box clearfix">
+        <img class="coupon-bg" src="image/youhuiquan@2x.png" alt=""/>
+        <div class="clearfix subbox1">
+
+            <div class="product-check fl">
+                <input type="checkbox" class="checkbox" name="checkbox" value="{{prod.drawCouponId}}">
+                <label></label>
+                <span>{{prod.couponName}}</span>
+            </div>
+            <div class="fr number">{{prod.couponNum}}张</div>
+        </div>
+        <div class="clearfix subbox2">
+            <div class="fl">¥<span class="price">{{prod.offPrice}}</span></div>
+            <div class="fr">
+                <div>满{{prod.fullPrice}}元可用</div>
+                <div>有效期：{{prod.startDate}}-{{prod.endDate}}</div>
+            </div>
+        </div>
+        <div class="clearfix subbox3">
+            <div class="fl">仅限商城自营商品使用</div>
+            <div class="fr">
+                <button class="mui-btn numbox-btn-minus" type="button">-</button>
+                <input type="number" name="number" min="1" max="{{prod.couponNum}}" value="1" />
+                <button class="mui-btn numbox-btn-plus" type="button">+</button>
+            </div>
+        </div>
+    </div>
+    {{/each}}
+</script>
 <script src="js/lib/zepto.min.js"></script>
 <script src="js/lib/fastclick.min.js"></script>
 <script src="js/lib/template.js"></script>
-<script src="js/lib/mui.min.js"></script>
+<!--<script src="js/lib/mui.min.js"></script>-->
+<script src="js/common.js"></script>
 <script>
     $(function () {
         // 点击延迟处理
         FastClick.attach(document.body);
-        //上拉加载
-        mui.init({
-            pullRefresh: {
-                container: "#content",//待刷新区域标识，querySelector能定位的css选择器均可，比如：id、.class等
-                up: {
-                    height: 50,//可选.默认50.触发上拉加载拖动距离
-                    auto: false,//可选,默认false.自动上拉加载一次
-                    contentrefresh: "正在加载...",//可选，正在加载状态时，上拉加载控件上显示的标题内容
-                    contentnomore: '没有更多数据了',//可选，请求完毕若没有更多数据时显示的提醒内容；
-                    callback: function () {
-                        //业务逻辑代码，比如通过ajax从服务器获取新数据；
-
-                        //注意：
-                        //1、加载完新数据后，必须执行如下代码，true表示没有更多数据了：
-                        //2、若为ajax请求，则需将如下代码放置在处理完ajax响应数据之后
-                        this.endPullupToRefresh(true | false);
-                    }//必选，刷新函数，根据具体业务来编写，比如通过ajax从服务器获取新数据；
-                }
+        //设置cookie
+        var uid = getCookie("uid");
+        var device = getCookie("deviceType");
+        setCookie("uid",uid,"daxmall.com");
+        setCookie("deviceType",device,"daxmall.com");
+        ajaxSuccess("/coupon/getDrawCouponList","GET",{},callback,callback,true);
+        function callback(){
+            console.log(1)
+        }
+        //        复选框
+        $(".layout").on("click", "input[type='checkbox']", function () {
+            if ($("input[type='checkbox']:checked").size() != 0) {
+                $("#submit").addClass("enabled");
+            } else {
+                $("#submit").removeClass("enabled");
             }
-        });
+        })
+//        数字框
+        $(".layout").on("click",".numbox-btn-minus", function () {
+            var numberbox =$(this).next()
+            if(numberbox.val()>0){
+                numberbox.val(numberbox.val()-1)
+            }
+        })
+        $(".layout").on("click",".numbox-btn-plus", function () {
+            var numberbox =$(this).prev()
+            var a = numberbox.val()
+            var b = numberbox.attr("max")
+            if(a<b){
+                numberbox.val(parseInt(numberbox.val())+1)
+            }
+        })
+//        返回
+//        $(".return").on("click", function () {
+//            window.history.back();
+//        })
+//        派卷
+        $(".layout").on("click", ".enabled", function () {
+            var distConfig = []
+            $("input[type='checkbox']:checked").each(function (i) {
+                distConfig[i]={}
+                distConfig[i].drawCouponId=$(this).val();
+                distConfig[i].num=$(this).parent().parent().parent().find("input[type='number']").val();
+            })
+            console.log(JSON.stringify(distConfig))
+            var params = {"distConfig":JSON.stringify(distConfig)};
+            console.log(params)
+            $.ajax({
+                url:"/coupon/submitDistCoupConfig",
+                type: "POST",
+                data: params,
+                dataType: "json",
+                success: function (data) {
+                    console.info('success',data)
+                    if(!!data.code){
+                        callApp("sendCoupon",{couponId: data.id});
+                        alert("派卷成功");
+                        window.location.reload()
+                    }else {
+                        alert(data.msg)
+                    }
+                },
+                error: function (err) {
+                    console.info(err)
+                    alert(err.status+" "+err.statusText+" "+err.readyState+" "+err.responseText)
+                }
+            })
+        })
 
     })
 </script>
