--- a/liveShopping/productRecommend.html
+++ b/liveShopping/productRecommend.html
@@ -28,14 +28,14 @@
     <meta name='apple-itunes-app' content='app-id=966436668'>
     <!-- 适应移动端end -->
     <title>设置商品推荐</title>
-    <link rel="stylesheet" type="text/css" href="css/lib/mui.min.css">
+    <!--<link rel="stylesheet" type="text/css" href="css/lib/mui.min.css">-->
     <link rel="stylesheet" type="text/css" href="css/base.css">
     <link rel="stylesheet" type="text/css" href="css/productRecommend.css">
 </head>
 <body>
 <div class="layout">
     <header>
-        <a href="#" class="return"><</a>
+        <!--<a href="#" class="return"><</a>-->
         <h1>设置商品推荐</h1>
     </header>
     <nav >
@@ -56,18 +56,18 @@
 <script id="product-box" type="text/html">
     {{each prodList as prod i}}
     <div class="product-box clearfix" >
-        <a href="{{prod.prodUrl}}" class="fl product-img">
+        <a href="{{prod.prodUrl}}?isLiveShopping=1" class="fl product-img">
             <img src="{{prod.picUrl}}" alt="{{prod.title}}"/>
         </a>
         <div class="fr product-info">
-            <h3 class="product-title"><a href="{{prod.prodUrl}}">{{prod.title}}</a></h3>
+            <h3 class="product-title"><a href="{{prod.prodUrl}}?isLiveShopping=1">{{prod.title}}</a></h3>
 
             <div class="buyinfo clearfix">
                 <div class="fl">
                     <div class="price"><b>￥{{prod.promotionPrice}}</b></div>
                     <div class="peopleNum">销量: {{prod.buys}}  库存: {{prod.stocks}}  收藏: {{prod.favorite}} </div>
                 </div>
-                <a href="javascript:;" data-picUrl="{{prod.picUrl}}" data-title="{{prod.title}}" data-promotionPrice="{{prod.promotionPrice}}" data-productId="{{prod.productId}}" class="fr recommendBtn main-color">推荐</a>
+                <a href="javascript:;" data-picUrl="{{prod.picUrl}}" data-title="{{prod.title}}" data-promotionPrice="{{prod.promotionPrice}}" data-productId="{{prod.productId}}" data-productUrl="{{prod.prodUrl}}?isLiveShopping=1" class="fr button recommendBtn main-color">推荐</a>
             </div>
         </div>
     </div>
@@ -76,7 +76,7 @@
 <script src="js/lib/zepto.min.js"></script>
 <script src="js/lib/fastclick.min.js"></script>
 <script src="js/lib/template.js"></script>
-<script src="js/lib/mui.min.js"></script>
+<!--<script src="js/lib/mui.min.js"></script>-->
 <script src="js/common.js"></script>
 <script>
     $(function () {
@@ -108,28 +108,22 @@
             }
             ajaxSuccess("/liveshoppingManage/getInLiveshoppingProdList","POST",params);
         });
-        $(".return").on("click", function () {
-            window.history.back();
-        })
+//        $(".return").on("click", function () {
+//            window.history.back();
+//        })
 //        调app方法
-        $(".layout").on("click",".recommendBtn", function () {
-            var json =  {
-                "productId":$(this).data("productid"),
-                "picUrl":$(this).data("picurl"),
-                "title":$(this).data("title"),
-                "promotionPrice":$(this).data("promotionprice")
-            }
-            if(isIOS()){
-                connectWebViewJavascriptBridge(function (bridge) {
-                    bridge.callHandler('recommend', json, function (responedata) {
-                    });
-                });
-            }else if(window.android) {
-                window.android.recommend(json);
-            }else{
-                alert("请在健康猫APP打开！");
-            }
-        })
+            $(".layout").on("click","a.recommendBtn",function () {
+                var json =  {
+                    "productId":$(this).data("productid"),
+                    "picUrl":$(this).data("picurl"),
+                    "title":$(this).data("title"),
+                    "promotionPrice":$(this).data("promotionprice"),
+                    "productUrl":$(this).data("producturl")
+                }
+                callApp("recommend",json);
+                alert("推荐成功")
+            })
+
     })
 </script>
 </body>
